<resources>
    <string name="app_name">WasiatD</string>
    <string name="TextSplash">The Future of Home Agriculture</string>
    <string name="IconSplash">Splash Logo!!!!</string>

    <string name="nameLabel">Name</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="loginLabel">Login</string>
    <string name="confirmPasswordLabel">Confirm Password</string>
    <string name="registerImageDescription">Background Image</string>
    <string name="loginTagline">Already Registered? Log in here.</string>
    <string name="signInTagline">Sign in to continue.</string>
    <string name="loginImageDescription">Background Login Image</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="passwordText">******</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="emailText">iniemail@gmail.com</string>
    <string name="signUp">Forgot Password?</string>
    <string name="createAccount">Don\'t have an account? Register</string>
    <string name="createNewAccountLabel">Create new Account</string>
    <string name="signUpLabel">Sign Up</string>
    <string name="nameHint">Name</string>
    <string name="nameText">Afif Udin Pol Ganteng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginPageText">Login</string>

    <string name="plantLabel">Plant Name</string>
    <string name="latinLabel">Scientific Name</string>
    <string name="dateLabel">Planted Date</string>
    <string name="plantInfoLabel">Plant Information</string>
    <string name="isWateringLabel">Has it been watered?</string>
    <string name="timeScheduleLabel">Time Schedule</string>
    <string name="temperatureLabel">Temperature</string>
    <string name="plantName">Tomato</string>\
    <string name="plantLatinName">Solanum lycopersicum</string>

    <string name="plantDiseaseLabel">Plant Disease</string>
    <string name="plantDiseaseInformation">Please Scan your Leaf Plan</string>
    <string name="updateImageLabel">Update Image</string>
    <string name="analyzeLabel">Analyze Plant Disease</string>
    <string name="plantedDate">20/02/2024</string>
    <string name="isWatering">No</string>
    <string name="light">88</string>
    <string name="timeSchedule">21:48</string>
    <string name="temperature">36</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="analyze">Analyze</string>
    <string name="plantDisease">Tomato Leaf Curl Virus</string>
    <string name="plantDiseaseDescriptionLabel">Plant Disease Description</string>
    <string name="plantDiseaseDescription">Tomato leaf curl virus is a DNA virus from the genus Begomovirus and the family Geminiviridae. </string>
    <string name="addTask">Add Task</string>
    <string name="taskLabel">Here is your to-do-list!</string>
    <string name="detailLabel">View Disease Detail</string>
    <string name="plantLocation">In Front of Chair</string>
    <string name="analyzeText">Check your plan disease!</string>
    <string name="analyzeParagraph">Healthy plants make your life great!</string>
    <string name="humidity">19</string>
    <string name="plantDescription">Plant Description</string>
    <string name="plantDescriptionText">Tomato is a plant. The tomato is the edible berry of the plant Solanum lycopersicum,
        commonly known as a tomato plant. </string>
    <string name="lightLabel">Light Intensity</string>
    <string name="taskCreate">15 Minutes Ago</string>
    <string name="taskTitle">Watering the plants</string>
    <string name="taskDescription">Lorem Ipsum is simply dummy text of the printing
        and  typesetting industry. Lorem Ipsum has been the industrys standard dummy
        text ever since the 1500s,
    </string>
    <string name="invalidCredential">Invalid Credential, please try again!</string>
    <string name="systemFailure">System Error! Please Try Again!</string>
    <string name="hello">Hello!</string>
    <string name="reminderText">Don\'t forget to keep you plant healthy!</string>
    <string name="location">Location</string>
    <string name="humidityLabel">Humidity</string>
    <string name="humidityLabelWithAnnote">Humidity:</string>
    <string name="locationLabelWithAnnote">Location:</string>
    <string name="descriptionLabelWithAnnote">Description:</string>
    <string name="plantCondition">Need Watering</string>
    <string name="plantHumidity">Cold</string>
    <string name="relayLabel">Relay</string>
    <string name="relay">70%</string>
    <string name="diseaseStartLabel">Upload Your Image First!</string>
    <string name="addNewTaskLabel">Add New Task</string>
    <string name="addNewTaskText">Here is your to-do-list!</string>
    <string name="taskTittleLabel">Task Tittle</string>
    <string name="taskTittle">Tittle</string>
    <string name="taskDescriptionLabel">Task Description</string>
    <string name="taskDescriptionText">Description</string>
    <string name="addTaskButton">Add Task</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="searchLabel">Want to search something?</string>
    <string name="plant_description_here">Plant Description Here</string>
</resources>