<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".utils.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/backgroundImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/registerImageDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/login_gif" />

            <ImageView
                android:id="@+id/loginImage"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_height="120dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/loginImageDescription"
                android:src="@drawable/wasiatd_logo" />


            <TextView
                android:id="@+id/loginPageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_bold"
                android:text="@string/loginPageText"
                android:textColor="@color/sage_green"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/subtitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signInTagline"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/emailLabel"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edit_text_background"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:text="@string/emailText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/labelPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/passwordLabel"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="password"
                android:background="@drawable/edit_text_background"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:padding="12dp"
                android:text="@string/passwordText" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/sage_green"
                android:padding="12dp"
                android:text="@string/loginLabel"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                android:text="@string/forgotPassword"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/createAccount"
                android:layout_marginBottom="32dp"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
