<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.addplant.AddPlantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_shape_toolbar"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="Detail Plant"
                app:titleTextColor="@color/green_stroke">
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/plant_image"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/registerImageDescription"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gif_dashboard"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/greetingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/hello"
                        android:textColor="@color/sage_green"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/reminderText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/reminderText"
                        android:textColor="@color/sage_green"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/labelName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/plantLabel"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/plant_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:enabled="false"
                        android:fontFamily="@font/inter"
                        android:padding="12dp"
                        android:text="@string/plantName"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/plantDescriptionLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/plantDescription"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/plant_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:fontFamily="@font/inter"
                        android:padding="12dp"
                        android:text="@string/plantDescriptionText"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/location"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/plant_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:enabled="false"
                        android:fontFamily="@font/inter"
                        android:inputType="date"
                        android:padding="12dp"
                        android:text="@string/plantLocation"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/phLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/phLabel"
                        android:textColor="@android:color/black"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/plant_ph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:enabled="false"
                        android:fontFamily="@font/inter"
                        android:inputType="date"
                        android:padding="12dp"
                        android:text="@string/ph"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/temperatureLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/temperatureLabel"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/plant_temperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:enabled="false"
                        android:fontFamily="@font/inter"
                        android:inputType="date"
                        android:padding="12dp"
                        android:text="@string/temperature"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/humidity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/humidityLabel"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/plant_humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:enabled="false"
                        android:fontFamily="@font/inter"
                        android:inputType="date"
                        android:padding="12dp"
                        android:text="@string/humidity"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <Button
                        android:id="@+id/button_save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/sage_green"
                        android:layout_marginTop="16dp"
                        android:padding="12dp"
                        android:text="@string/save"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/analyzeLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_bold"
                        android:text="@string/analyzeText"
                        android:textColor="@color/sage_green"
                        android:layout_marginTop="12dp"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/analyzeParagraph"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/analyzeParagraph"
                        android:textColor="@color/sage_green"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/plantDiseaseLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/plantDiseaseLabel"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <EditText
                        android:id="@+id/plantDiseaseInformation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/edit_text_background_white"
                        android:fontFamily="@font/inter"
                        android:padding="12dp"
                        android:text="@string/plantDiseaseInformation"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />

                    <TextView
                        android:id="@+id/detailLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/detailLabel"
                        android:textColor="@color/blue"
                        android:gravity="center"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/analyzeImageLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="@string/analyzeLabel"
                        android:textColor="@android:color/black"
                        android:textSize="12sp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/button_open_camera"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/sage_green"
                                android:padding="12dp"
                                android:text="@string/camera"
                                android:textColor="@android:color/white" />

                            <Button
                                android:id="@+id/button_open_gallery"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:backgroundTint="@color/sage_green"
                                android:padding="12dp"
                                android:text="@string/gallery"
                                android:textColor="@android:color/white" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/button_decode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/sage_green"
                            android:padding="12dp"
                            android:text="@string/analyze"
                            android:textColor="@android:color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>