<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/listPlantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plantName"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listPlantLocation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layout_marginTop="4dp"
                android:text="@string/locationLabelWithAnnote"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/listPlanLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layout_marginTop="4dp"
                android:text="@string/location"
                android:layout_marginLeft="2sp"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listPlantDescription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layout_marginTop="4dp"
                android:text="@string/descriptionLabelWithAnnote"
                android:textSize="14sp"
                android:justificationMode="inter_word"/>

            <TextView
                android:id="@+id/listPlantDescription3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layout_marginTop="4dp"
                android:text="@string/plantDescription"
                android:layout_marginLeft="2sp"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
