<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/task_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:fontFamily="@font/inter"
            android:text="@string/taskCreate"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskTitle"
            android:layout_marginTop="4sp"
            android:fontFamily="@font/inter_bold"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/taskDescription"
            android:textSize="14sp"
            android:justificationMode="inter_word"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
